[project]
name = "des-project"
version = "0.1.0"
description = "des encryption attack demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.11.6",
    "tqdm>=4.67.1",
]

# Enable styling rules to ensure clean code
# and consistent formatting.
[tool.ruff.lint]
select = [
    "RUF",
    "UP",
    "E",
    "W",
    "I"
]
